--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ header button {
     border:none;
     background: none;
     width: fit-content;
+    cursor: pointer;
 }
 
 header nav.mobile {
@@ -80,6 +81,12 @@ header .mobile a {
     font-size: 1.125rem;
     line-height: 1.5rem;
 }
+
+
+header .desktop {
+    display: none;
+}
+
 
 main {
     max-width: 1110px;
@@ -179,6 +186,10 @@ main {
     margin-block: 0.6rem;
 }
 
+.terceira-seçao a {
+    text-decoration: none;
+}
+
 .terceira-seçao p {
     font-size: 0.9375rem;
     line-height: 1.625rem;
@@ -186,8 +197,27 @@ main {
 }
 
 @media(min-width: 1110px) {
+    header > button {
+        display: none;
+    }
 
-main {
+    header .desktop {
+        display: flex;
+        gap:2.5rem;
+    }
+
+    header .desktop a {
+        font-size: 0.9375;
+        line-height: 1.625rem;
+        text-decoration: none;
+        color: var(--gunmetal);
+    }
+
+    header .desktop a:hover {
+        color:var(--vermillion)
+    }
+
+    main {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 1.75rem;
@@ -213,23 +243,21 @@ main {
     font-size: 3.5rem;
 }
 
+.primeira-seçao button:hover {
+    background-color: var(--dark-blue);
+    cursor: pointer;
+}
+
 .segunda-seçao h2 {
     font-size: 2.5rem;
 }
 
-    header > button {
-        display: none;
-    }
+.terceira-seçao {
+    display: flex;
+    grid-column: 1 / 4;
+}
 
-    header .desktop {
-        display: flex;
-        gap:2.5rem;
-    }
-
-    header .desktop a {
-        font-size: 0.9375;
-        line-height: 1.625rem;
-        text-decoration: none;
-        color: var(--gunmetal);
-    }
+.terceira-seçao h2:hover {
+    color:var(--vermillion)
+}
 }
